moved button styling to theme.css for hospital.html and applied css fixes for text and navbar alignment

--- a/src/client/css/doctors.css
+++ b/src/client/css/doctors.css
@@ -380,6 +380,7 @@
   }
 
   .header-title {
+    top:40%;
     left: 5rem;
     font-family: "Nexa-Light";
   }
