--- a/src/client/css/theme.css
+++ b/src/client/css/theme.css
@@ -91,7 +91,16 @@ button {
   padding: 0.5rem 2rem;
 }
 
+.call-btn {
+  display: block;
+  margin: 1rem auto;
+  width: auto;
+  font-size: 0.8rem;
+  padding: 0.5rem 4rem;
+}
+
 .submit-enquiry-btn {
+  background: #0099ff;
   font-size: 1.1rem;
   padding: 1rem 2.5rem;
 }
@@ -276,6 +285,16 @@ footer {
     width:auto;
   }
 
+  .call-btn {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-left: 1rem;
+    width:auto;
+  }
+
+
   h1 {
     font-size: 2.2rem;
     line-height: 1.3rem;
@@ -378,6 +397,16 @@ footer {
     grid-column-end: 3;
     margin-left: 0.5rem;
     width:auto;
+  }
+
+  .call-btn{
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-left: 1rem;
+    width:auto;
+    padding:0.5rem 2rem;
   }
 
   li {
